--- a/res/layout/activity_starting.xml
+++ b/res/layout/activity_starting.xml
@@ -17,6 +17,7 @@
         android:layout_gravity="center"
         android:gravity = "center"
         android:id="@+id/textViewDisplay"
+        android:layout_marginTop="150dp"
         ></TextView>
     <Button
         android:layout_width="250dp"
