--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -45,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="35dp"
-        android:text="Options" />
+        android:text="Options" 
+        android:visibility="invisible"/>
     
 </LinearLayout>
