--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <ListPreference
-        android:title="Change Speed"
-        android:key="speedList"
-        android:summary="Change the time between equations"
-        android:entries="@array/seconds"
-        android:entryValues="@array/values"
-        ></ListPreference>
+    <Preference
+        android:title="Reset"
+        android:key = "reset"
+        android:summary = "Reset all data"
+    />    
     
 
 </PreferenceScreen>
