--- a/res/layout/pause_menu.xml
+++ b/res/layout/pause_menu.xml
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:text="Options"
-        android:visibility = "invisible" />"
+        android:visibility = "gone" />"
     
     <Button
         android:id="@+id/quitButton"
