--- a/res/drawable-hdpi/custom.xml
+++ b/res/drawable-hdpi/custom.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_enabled="false" android:drawable="@drawable/lock"></item>
     <item android:state_enabled="true" android:drawable="@drawable/orange"></item>
+    <item android:state_pressed="true" android:drawable="@drawable/orange_pressed"></item>
 
 </selector>
