--- a/res/layout/level_select_menu.xml
+++ b/res/layout/level_select_menu.xml
@@ -7,7 +7,8 @@
 	<LinearLayout android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height = "wrap_content"
-	    android:layout_marginTop="20dp">
+	    android:layout_marginTop="20dp"
+	    android:weightSum="100">
 	    
 	    <Button
         	android:id="@+id/l1Button"
@@ -19,7 +20,8 @@
         	android:layout_height="wrap_content"
 			android:layout_marginLeft="20dp"
         	android:layout_marginRight="20dp"
-        	android:text="1" />
+        	android:text="1" 
+        	android:layout_weight="25"/>
 
     	<Button
         	android:id="@+id/l2Button"
@@ -31,7 +33,8 @@
 	        android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:layout_marginRight="20dp"
-        	android:text="2" />
+        	android:text="2" 
+        	android:layout_weight="25"/>
 
 	    <Button
     	    android:id="@+id/l3Button"
@@ -43,7 +46,8 @@
        		android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_marginRight="20dp"
-        	android:text="3" />
+        	android:text="3" 
+        	android:layout_weight="25"/>
 
     	<Button
         	android:id="@+id/l4Button"
@@ -55,14 +59,16 @@
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_marginRight="20dp"
-        	android:text="4" />
+        	android:text="4" 
+        	android:layout_weight="25"/>
     	
     	</LinearLayout>
     	
     	<LinearLayout android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height = "wrap_content"
-	    android:layout_marginTop="20dp">
+	    android:layout_marginTop="20dp"
+	    android:weightSum="100">
 	    
 	    <Button
         	android:id="@+id/l5Button"
@@ -74,7 +80,8 @@
         	android:layout_height="wrap_content"
 			android:layout_marginLeft="20dp"
         	android:layout_marginRight="20dp"
-        	android:text="5" />
+        	android:text="5" 
+        	android:layout_weight="25"/>
 
     	<Button
         	android:id="@+id/l6Button"
@@ -86,7 +93,8 @@
 	        android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:layout_marginRight="20dp"
-        	android:text="6" />
+        	android:text="6" 
+        	android:layout_weight="25"/>
 
 	    <Button
     	    android:id="@+id/l7Button"
@@ -98,7 +106,8 @@
        		android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_marginRight="20dp"
-        	android:text="7" />
+        	android:text="7" 
+        	android:layout_weight="25"/>
 
     	<Button
         	android:id="@+id/l8Button"
@@ -110,7 +119,9 @@
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_marginRight="20dp"
-        	android:text="8" />
+        	android:text="8" 
+        	android:layout_weight="25"/>
+    	
     	
     	</LinearLayout>
 
