--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -19,6 +19,7 @@
     
     <ImageView
         android:id="@+id/image"
+        android:contentDescription="image"
         android:layout_width="174dp"
         android:layout_height="156dp"
         android:layout_gravity="center"
