--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity" 
+    android:keepScreenOn="true">
     
 	<LinearLayout android:orientation = "horizontal" 
 	    android:layout_width="fill_parent"
