--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" 
-    android:background="@drawable/rook_logo_splash">
+    android:background="@drawable/rook_logo_splash"
+    android:clearTaskOnLaunch="true">
     
 
 </LinearLayout>
